--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/NewsApp-ejb/build/
+/NewsApp-ejb/dist/
+/NewsApp-war/build/
+/build/
+/NewsApp-war/dist/
