--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
 build.dir=build
 build.generated.dir=${build.dir}/generated
 client.module.uri=NewsApp-war
-client.urlPart=/ListNews
+client.urlPart=/userCreate.html
 debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
 dist.dir=dist
