--- a/NewsApp-war/nbproject/genfiles.properties
+++ b/NewsApp-war/nbproject/genfiles.properties
@@ -6,3 +6,6 @@ build.xml.stylesheet.CRC32=651128d4@1.68.1.1
 nbproject/build-impl.xml.data.CRC32=7dcc85e3
 nbproject/build-impl.xml.script.CRC32=5085cfe3
 nbproject/build-impl.xml.stylesheet.CRC32=99ea4b56@1.68.1.1
+nbproject/rest-build.xml.data.CRC32=7dcc85e3
+nbproject/rest-build.xml.script.CRC32=d45424da
+nbproject/rest-build.xml.stylesheet.CRC32=0cfeebcc@1.27.1
